style.css
@font-face {
    font-family: 'OSRS-Font';
    src: url('./assets/fonts/runescape.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'OSRS-Font';
    src: url('./assets/fonts/runescape_bold.ttf') format('truetype');
    font-weight: bold;
    font-style: normal;
}

:root {
    --osrs-orange: #ff9800;
    --osrs-yellow: #ffd700;
    --color-almostblack: #070707;
    --color-darkgrey: #1a1a1a;
    --color-lightgrey: #333;
    --color-greytext: #bbb;
}

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: Arial, sans-serif;
  min-width: 1500px;
}

/* App layout */
.app {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  gap: 20px;
  padding: 40px 20px;
  background: radial-gradient(circle at center, #1e1e1e 0%, #0a0a0a 100%);
  box-shadow: inset 0 0 80px rgba(0, 0, 0, 0.9);
  min-height: 100vh;
  width: 100%;
}

/* BANK */
.bank-wrapper {
  position: relative;
}

.bank {
  position: relative;
  display: inline-block;
  width: min-content;
  height: auto;
}

#bank-background {
  display: block;
  width: 634px;
  height: 790px;
  user-select: none;
  -webkit-user-drag: none;
  pointer-events: none;
}

/* SLOT COUNTER */
.slot-count-number {
    position: absolute;
    font-family: 'OSRS-Font', sans-serif;
    font-size: 14px;
    width: 20px;
    color: var(--osrs-orange);
    text-shadow: 1px 1px 0px #000;
    pointer-events: none;
    text-align: center;
    z-index: 25;
}

#current-count {
    top: 8px;
    left: 52px; 
}

#max-count {
    top: 23px;
    left: 52px; 
}

/* GRID */
.bank-grid {
  position: absolute;
  top: 98px;
  left: 71px;
  width: 500px;
  display: grid;
  grid-template-columns: repeat(8, 46px);
  gap: 0 16px;
  pointer-events: auto;
}

/* SLOT */
.slot {
  width: 46px;
  height: 46px;
  border-radius: 6px;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 3px solid transparent;
  background-clip: content-box;
}

/* DROPZONES */
.dragging-item .slot {
  box-shadow: inset 0 0 0 1px var(--color-lightgrey);
}

.slot.over {
  box-shadow: inset 0 0 0 2px var(--osrs-orange);
}

/* ITEM STYLES */
.item {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: grab;
  user-select: none;
}

/* ITEM IN BANK */
.slot .item {
  background: transparent;
  border: none;
}

.slot .item img {
    width: auto;
    height: auto;

    transform: scale(1.25);

    object-fit: contain;
    display: block;
    margin: auto;
}

.item.dragging {
  opacity: 0.5;
}

.item.hidden {
  display: none;
}

/* ITEM PANEL */
.search-container {
    position: relative;
    width: 100%;
    margin-bottom: 12px;
}

.search-container input {
    width: 100%;
    padding: 10px 35px 10px 12px;
    margin-bottom: 0;
}

.clear-btn {
    position: absolute;
    right: 8px;
    top: 20%;
    
    width: 18px;
    height: 18px;
    background: #5d5d5d;
    opacity: 0.6;
    border: none;
    border-radius: 50%;
    color: #111;
    font-size: 14px;
    line-height: 1;
    cursor: pointer;
    display: none; /* Hidden by default */
    align-items: center;
    justify-content: center;
    transition: background 0.2s;
}

.clear-btn:hover {
    background: #ffffff9a;
    color: #000;
}

.item-panel {
    width: 330px;
    height: 866px;
    background: var(--color-darkgrey);
    border: 1px solid var(--color-almostblack);
    border-radius: 8px;
    padding: 16px;
    display: flex;
    flex-direction: column;
    box-shadow: 4px 4px 15px rgba(0,0,0,0.5);
}

.item-panel input {
    width: 100%;
    padding: 10px;
    margin-bottom: 12px;
    background: #0a0a0a;
    border: 1px solid #333;
    border-radius: 4px;
    color: var(--osrs-orange);
    font-family: 'OSRS-Font', sans-serif;
    font-size: 16px;
    outline: none;
    transition: border-color 0.2s;
}

.item-panel input:focus {
    border-color: var(--osrs-orange);
}

.item-panel input::placeholder {
  color: #aaa;
}

.item-list {
    display: grid;
    grid-template-columns: repeat(6, 40px);
    justify-content: center;
    align-content: start;
    gap: 4px;
    padding: 10px 10px 10px 2px;
    background: #151515;
    border: 1px solid #000;
    border-radius: 4px;
    box-shadow: inset 2px 2px 5px rgba(0,0,0,0.5);
    
    flex-grow: 1;
    overflow-y: auto;
    overflow-x: hidden;
    width: 100%;
    min-height: 0;
    
    scrollbar-gutter: stable; 
}

.item-list .item {
    width: 40px;
    height: 40px;
    aspect-ratio: 1 / 1;
    margin: 0 auto;

    background: var(--color-darkgrey);
    border: 1px solid var(--color-lightgrey);
    border-radius: 4px;
}

.item-list .item:hover {
    background: #252525;
    border-color: #5d5d5d;
}

.item-list .item img {
    max-width: 36px;  
    max-height: 32px; 
    width: auto;
    height: auto;
    object-fit: contain;
    object-position: center;
    filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.8));
}

.item-list::-webkit-scrollbar {
    width: 10px;
}

.item-list::-webkit-scrollbar-track {
    background: #0a0a0a;
    border-left: 1px solid #222;
}

.item-list::-webkit-scrollbar-thumb {
    background: #333;
    border: 1px solid #111;
}

.item-list::-webkit-scrollbar-thumb:active {
    background: #7d7d7d;
}

/* Save Layout Button */
.save-layout-btn {
  position: absolute;
  z-index: 10;
  
  top: 46px;
  left: 8px;

  background-color: transparent;
  border: none;
  padding: 0;
  cursor: pointer;
  transition: transform 0.01s;
}

.save-layout-btn:hover {
  filter: brightness(1.2);
}

.save-layout-btn:active {
  transform: scale(0.95);
}

.save-layout-btn:disabled {
    opacity: 0.9;
    transform: none;
    cursor: default;
}

.save-layout-btn:disabled img,
.save-layout-btn:disabled span {
    filter: grayscale(50%) brightness(0.6) !important;
}

.save-layout-btn:disabled:hover {
    filter: brightness(1) !important;
}
/* ... */

